test_suite/tests/ui/malformed_prefix_attr.stderr
error: expected #[prefix("...")]
 --> tests/ui/malformed_prefix_attr.rs:4:1
  |
4 | #[prefix(APP)]
  | ^^^^^^^^^^^^^^
