test_suite/tests/ui/malformed_prefix_attr.rs
use configloader::ConfigLoader;

#[derive(ConfigLoader)]
#[prefix(APP)]
struct Config {
    port: u16,
}

fn main() {}
